[package]
name = "lsboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = {version = "0.12.0", features = ["exts"]}
log = { version = "0.4.11", default-features = false }
uefi-services = "0.9.0"
goblin = {version = "0.4.3", default-features = false, features = ["elf64", "elf32", "endian_fd"]}