[package]
name = "lsboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = {version = "0.13.0", features = ["exts", "alloc", "logger"]}
log = "0.4.14"
uefi-services = "0.10.0"
goblin = {version = "0.4.3", default-features = false, features = ["elf64", "elf32", "endian_fd"]}